First-commit-on-the-great-idea-project

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,49 +15,84 @@
 </head>
 
   <body>
+    <div class="container">
+        <header>
+          <nav>
+            <a href="#">Services</a>
+            <a href="#">Product</a>
+            <a href="#">Vision</a>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <section class="great-idea">
+              <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+            </section>
+          </nav>
+        </header>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+      <div class="first-section">       
+        <div class="inno-img">
+          <h1>Innovation <br> On <br> Demand</h1>
+          <button>Get Started</button>
+        </div>
+      
+        <div class="inno-img">
+          <img id="header" src="img/header-img.png" alt="Image of a code snippet.">
+        </div>
+      </div>
+      <hr>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+      <div class="second-div">
+        <div>
+          <section class="section-two">
+            <h2>Features</h2>
+            <p id="features">
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </section>
 
-  Get Started
+          <section class="section-two">
+            <h2>About</h2>
+            <p id="about">
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+          </p>
+          </section>
+        </div>
+        <section>
+            <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+        </section>
+      </div>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+      <div class="third-div">
+        <section class="section-three">
+          <h2>Services</h2>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </section>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        <section class="section-three">
+          <h2>Product</h2>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </section>
 
+        <section class="section-three">
+          <h2>Vision</h2>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </section>
+      </div> <hr>
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      <section class="contact-section" >
+        <h2>Contact</h2>
+        <address>
+          123 Way 456 Street <br>
+          Somewhere, USA <br><br>
+          1 (888) 888-8888<br><br>
+          sales@greatidea.io <br>
+        </address>
+      </section>
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
-  Copyright Great Idea! 2018
-  
+      <footer class="footer-content">
+        &copy; Great Idea! 2018
+      </footer>
+    </div>
   </body>
 </html>
